# mio

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  activate  pyproject.toml
src/mio/: __init__.py  _ext.py  _serialize.py  _tgz.py  cli.py  cli_imap.py  cloudflare.py  error.py  ext.py  imap.py  tgz.py
tests/: __init__.py  test_mio.py
tests/mio/: test_cli_imap.py  test_error.py  test_ext.py  test_imap.py  test_serialize.py  test_tgz.py
