[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mio"
dynamic = ["version"]
description = "personal backups for data in the cloud"
readme = "README.md"
authors = [
  {name = "Germán Fuentes Capella"}
]
maintainers = [
  {name = "Germán Fuentes Capella"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Archiving :: Backup"
]
license = { file = "LICENSE" }

dependencies = [
  "requests>=2.31",
  "defusedxml>=0.7",
  "cloudflare>=3.1",
]

[project.optional-dependencies]
dev = [
    "coverage>7.5",  # testing
    "mypy>=1.10",  # type checking
    "pytest>=8.2",  # testing
    "ruff>=0.4"  # linting
]

[project.urls]
bugs = "https://github.com/cloudgerman/mio/issues"
homepage = "https://github.com/cloudgerman/mio"

[project.scripts]
mio = "mio.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.mypy]
files = "."
strict = true
warn_unreachable = true
warn_no_return = true

[tool.ruff]
src = ["src", "tests"]
line-length = 120
